[gd_scene load_steps=12 format=2]

[ext_resource path="res://StyleHeartSmall.tres" type="StyleBox" id=1]
[ext_resource path="res://font/font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://TextHover.gd" type="Script" id=4]
[ext_resource path="res://PauseScreen.gd" type="Script" id=6]
[ext_resource path="res://graphics/menu_idea.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/ptwht/playtime.ttf"

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = SubResource( 1 )

[node name="Node2D" type="Control"]
pause_mode = 2
script = ExtResource( 6 )

[node name="menu_idea" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="."]
margin_top = 16.0
margin_right = 768.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Paused"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level0" type="Button" parent="."]
pause_mode = 2
margin_left = 281.098
margin_top = 405.433
margin_right = 550.098
margin_bottom = 483.433
focus_neighbour_top = NodePath("../Level1")
focus_neighbour_bottom = NodePath("../Level1")
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.176471, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.634766, 0.109812, 0.404693, 1 )
text = "Resume"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="."]
pause_mode = 2
margin_left = 211.664
margin_top = 497.801
margin_right = 546.664
margin_bottom = 575.801
focus_neighbour_top = NodePath("../Level0")
focus_neighbour_bottom = NodePath("../Level0")
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.176471, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.634766, 0.109812, 0.404693, 1 )
text = "Quit to Menu"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FocusGrab" type="Button" parent="."]
pause_mode = 2
margin_left = -176.704
margin_top = 50.3968
margin_right = -164.704
margin_bottom = 70.3968
focus_neighbour_left = NodePath("../Level0")
focus_neighbour_top = NodePath("../Level0")
focus_neighbour_right = NodePath("../Level0")
focus_neighbour_bottom = NodePath("../Level0")
focus_next = NodePath("../Level0")
focus_previous = NodePath("../Level0")
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Level0" to="." method="_resume_sel"]
[connection signal="pressed" from="Level1" to="." method="_menu_sel"]
